--- a/.github/workflows/build-monero-c.yml
+++ b/.github/workflows/build-monero-c.yml
@@ -221,6 +221,8 @@ jobs:
               <string>FMWK</string>
               <key>CFBundleVersion</key>
               <string>1.0</string>
+              <key>CFBundleShortVersionString</key>
+              <string>1.0</string>
               <key>MinimumOSVersion</key>
               <string>15.0</string>
           </dict>
