--- a/ios/Frameworks/MoneroWallet.xcframework/ios-arm64/MoneroWallet.framework/Info.plist
+++ b/ios/Frameworks/MoneroWallet.xcframework/ios-arm64/MoneroWallet.framework/Info.plist
@@ -12,6 +12,8 @@
     <string>FMWK</string>
     <key>CFBundleVersion</key>
     <string>1.0</string>
+    <key>CFBundleShortVersionString</key>
+    <string>1.0</string>
     <key>MinimumOSVersion</key>
     <string>15.0</string>
 </dict>
