Have a single source for flutter version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,12 +16,26 @@ jobs:
     outputs:
       version: ${{ steps.version.outputs.VERSION }}
       tag: ${{ steps.version.outputs.TAG }}
+      flutter_version: ${{ steps.flutter.outputs.FLUTTER_VERSION }}
     steps:
       - name: Extract version from tag
         id: version
         run: |
           echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
           echo "TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout: pubspec.yaml
+          sparse-checkout-cone-mode: false
+
+      - name: Extract Flutter version from pubspec.yaml
+        id: flutter
+        run: |
+          FLUTTER_VERSION=$(grep -E '^\s+flutter:\s+' pubspec.yaml | head -1 | sed 's/.*flutter:\s*//')
+          echo "FLUTTER_VERSION=${FLUTTER_VERSION}" >> $GITHUB_OUTPUT
+          echo "Using Flutter version: ${FLUTTER_VERSION}"
 
   build-android:
     name: Android
@@ -129,7 +143,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: stable
-          flutter-version: 3.41.0
+          flutter-version: ${{ needs.version.outputs.flutter_version }}
 
       - name: Install dependencies
         run: flutter pub get
@@ -171,7 +185,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: stable
-          flutter-version: 3.41.0
+          flutter-version: ${{ needs.version.outputs.flutter_version }}
 
       - name: Install CocoaPods
         run: brew install cocoapods
