--- a/.github/workflows/build-builder-image.yml
+++ b/.github/workflows/build-builder-image.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'Dockerfile.builder'
       - '.github/workflows/build-builder-image.yml'
+      - 'pubspec.yaml'
   workflow_dispatch:
 
 env:
@@ -26,6 +27,13 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Extract Flutter version from pubspec.yaml
+        id: flutter
+        run: |
+          FLUTTER_VERSION=$(grep -E '^\s+flutter:\s+' pubspec.yaml | head -1 | sed 's/.*flutter:\s*//')
+          echo "FLUTTER_VERSION=${FLUTTER_VERSION}" >> $GITHUB_OUTPUT
+          echo "Using Flutter version: ${FLUTTER_VERSION}"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -56,6 +64,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            FLUTTER_VERSION=${{ steps.flutter.outputs.FLUTTER_VERSION }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
